# nothing-todo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cross.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  deny.toml  package-lock.json  templates.example.yaml  tunnel.sh
.github/workflows/: gui.yml  release-drafter.yml  rust.yml
aitodo/: .gitignore  Makefile
aitodo/backend/: Cargo.toml
aitodo/backend/src/: lib.rs  main.rs
aitodo/backend/src/adapters/: claude_code.rs
aitodo/backend/src/handlers/: mod.rs
aitodo/backend/src/models/: mod.rs
aitodo/docs/: SPEC.md
aitodo/frontend/: index.html
backend/: .gitignore  ARCHITECTURE.md  CONFIG.md  Cargo.toml  README.md  SEQUENCE.md  build.rs
backend/crates/lark/: Cargo.toml
backend/crates/lark/src/client/: mod.rs
backend/crates/lark/src/client/ws_client/: client.rs  frame_handler.rs  mod.rs  proto.rs  tests.rs
backend/crates/lark/src/service/: mod.rs
backend/crates/lark/src/service/im/v1/: p2_im_message_receive_v1.rs
backend/src/: config.rs  daemon.rs  executor_service.rs  lib.rs  log_flusher.rs  main.rs  scheduler.rs  service_context.rs  task_manager.rs  todo_progress.rs  tunnel.rs  updater.rs
backend/src/adapters/: agent_event.rs  atomcode.rs  claude_code.rs  claude_protocol.rs  codebuddy.rs  codewhale.rs  codex.rs  helpers.rs  hermes.rs  joinai.rs  joinai_event.rs  kilo.rs  kilo_event.rs  kimi.rs  mimo.rs  mimo_event.rs  mobilecoder.rs  mod.rs  opencode.rs  opencode_event.rs  pi.rs  pi_event.rs  zhanlu.rs  zhanlu_event.rs
backend/src/cli/: client.rs  commands.rs  mod.rs
backend/src/daemon/: macos.rs  mod.rs  redeploy.rs  windows.rs
backend/src/db/: agent_bot.rs  dashboard.rs  execution.rs  executor_config.rs  feishu_group_whitelist.rs  feishu_history_chat.rs  feishu_home.rs  feishu_message.rs  feishu_project_binding.rs  feishu_push_target.rs  feishu_response_config.rs  loop_.rs  migration.rs  migrations.rs  mod.rs  project_directory.rs  review_template.rs  skills.rs  step_.rs  tag.rs  todo.rs  todo_template.rs  webhook.rs  workspace_setting.rs  workspace_slash_command.rs
backend/src/db/entity/: agent_bots.rs  execution_logs.rs  execution_records.rs  executors.rs  feishu_group_whitelist.rs  feishu_history_chats.rs  feishu_homes.rs  feishu_messages.rs  feishu_project_bindings.rs  feishu_push_targets.rs  feishu_response_config.rs  loop_executions.rs  loop_hooks.rs  loop_stage_executions.rs  loop_stages.rs  loop_step_executions.rs  loop_steps.rs  loops.rs  mod.rs  project_directories.rs  steps.rs  tags.rs  todo_tags.rs  todo_templates.rs  todos.rs  workspace_settings.rs  workspace_slash_commands.rs
backend/src/execution_events/: db_adapter.rs  mod.rs
backend/src/execution_events/impls/: atomcode.rs  codebuddy.rs  codewhale.rs  codex.rs  kimi.rs  mimo.rs  mobilecoder.rs  mod.rs  pi.rs  zhanlu.rs
backend/src/executor_service/: auto_review.rs  completion.rs  log_capture.rs  mod.rs  pre_spawn.rs  spawn_lifecycle.rs  stages.rs  types.rs  worktree.rs
backend/src/feishu/: channel.rs  codec.rs  config.rs  message.rs  mod.rs
backend/src/feishu/sdk/: api_types.rs  cache.rs  client.rs  config.rs  error.rs  event.rs  http.rs  message.rs  mod.rs  token_manager.rs  ws_client.rs
backend/src/handlers/: action.rs  agent_bot.rs  backup.rs  config.rs  custom_template.rs  execution.rs  executor_config.rs  feishu_binding.rs  feishu_history.rs  hook.rs  loop_.rs  mod.rs  project_directory.rs  scheduler.rs  session.rs  skills.rs  step_.rs  sub_states.rs  sync.rs  tag.rs  todo.rs  todo_template.rs  usage_stats.rs  webhook.rs
backend/src/hooks/: db.rs  models.rs  service.rs  template.rs
backend/src/models/: loop_.rs  mod.rs  step_.rs
backend/src/services/: auto_review.rs  auto_update.rs  feishu_history_fetcher.rs  feishu_listener.rs  feishu_push.rs  incoming_bridge.rs  loop_runner.rs  loop_scheduler.rs  loop_trigger.rs  message_debounce.rs  mod.rs  usage_stats.rs  worktree.rs
backend/tests/: adapter_extended_tests.rs  api_integration_test.rs  business_logic_tests.rs  cli_command_tests.rs  cloud_sync_tests.rs  daemon_redeploy_tests.rs  db_core_coverage_tests.rs  db_helper_tests.rs  executor_config_tests.rs  executor_tests.rs  feishu_sdk_tests.rs  feishu_tests.rs  handler_tests.rs  hook_tests.rs  loop_expert_tests.rs  loop_step_tests.rs  process_cleanup_test.rs  scheduler_module_tests.rs  scheduler_tests.rs  services_tests.rs  todo_progress_tests.rs
design-system/aietodo/: MASTER.md
docs/: ADD_EXECUTOR_GUIDE.md  ANTD_DROPDOWN_FIX.md  ARCHITECTURE_HEALTH_CHECK_REPORT.md  CLI_DESIGN.md  NPM_PUBLIST.md  OPTIMIZATION_RECOMMENDATIONS.md  SPEC.md  WORKSPACE_REFACTOR_ANALYSIS.md  action-button-component.md  architecture.html  frontend-features.md  issue_295_pragma_optimize_api_issue.md  issue_logs_lost_investigation.md  issue_test_compile_error.md  ntd-api.md  ntd-cli.md  plan-feishu-messaging.md  session-management-design.md
docs/requirements/: project-directory-git-worktree.md
docs/user-guide/: README.md
frontend/: check_auto_review_e2e.cjs  check_auto_review_ui.cjs  check_todo_id.js  check_todo_id.mjs  e2e-test.spec.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  test_api.cjs  test_bind_final.cjs  test_debug.js  test_executor_config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  constants.ts  main.tsx
frontend/test-results/: .last-run.json
frontend/tests/: backup-size-format-screenshots.spec.ts  check_skill_file_browser.spec.ts  issue-176-remove-as-any.spec.ts  issue-648-command-extractor.spec.ts  issue-652-collapsible-conclusion.spec.ts  issue-657-mobile-command-view.spec.ts  issue-657-mount.html  issue-657-mount.ts  kilo-executor.spec.ts  left-rail-shell.spec.ts  loop-kanban.spec.ts  loop-studio.spec.ts  step-loop-tags.spec.ts  verify_loop_limits.spec.ts  verify_loop_step_add.spec.ts  workspace-switcher.spec.ts  workspace_id_only.spec.ts
ntd-connect/: Cargo.toml
ntd-connect/src/: http.rs  (+9 more)
script/: npm_publish.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs
(+235 files in other folders)
