[package]
name = "ntd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# rusqlite = { version = "0.32", features = ["bundled"] }  # 已迁移到 SeaORM
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
regex = "1"
dirs = "5"
libc = "0.2"
tokio-cron-scheduler = { version = "0.13", features = ["signal"] }
cron = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "compression-gzip"] }

[dev-dependencies]
cargo-watch = "8"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
